Add fuzzing infrastructure: jqwik + Jazzer
- jqwik 1.9.0: 5 domini/ invariant properties (CRUD round-trips, shelf
  and tag membership, case-insensitive author filter) on
  ControladorDomini with per-try singleton reset
- Jazzer 0.24.0: 2 @FuzzTest harnesses (Rfc4180Reader streaming CSV,
  CsvUtils.parseLine) with 10k-iteration cap and IO/NSE-only contracts
- Makefile: fuzz-deps, fuzz-property, fuzz-jazzer, fuzz targets
  + .NOTPARALLEL: to serialize compile/fuzz-test-compile on shared bin/
- Windows mirrors: scripts/fuzz-{property,jazzer}.bat
- docs/fuzzing.md: when-to-use-what guide for the two tools
- .gitignore: .cifuzz-corpus/, fuzz-corpus/, crash-*, jqwik/jazzer jars,
  .jqwik-database (H2 side file dropped by jqwik)
- tot.txt: tracking entry for fuzzing work

BookImporter: switch sqlite3 CLI separator from pipe to tab. Pipe can
collide with content inside a Calibre book row, so the previous
line.split("\\|", -1) could misalign columns. -separator "\t" + the
new column-count guard fail loud instead of silently corrupting fields.

Config / DbConfig: char[] password overload. The char[] is zeroed as
soon as the String copy is created so callers can hand in a buffer
and let it die on use, instead of leaving a String in the heap.

Verified: make test 169/169, make fuzz-property 5/5 properties,
make fuzz-jazzer ~43M execs / 0 crashes, negative smoke test
(injected RuntimeException) detected by Jazzer in <2s.